--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@types/fs-extra": "^11.0.4",
         "@types/inquirer": "^9.0.8",
         "@types/node": "^24.0.4",
+        "firebase-admin": "^13.5.0",
         "nodemon": "^3.1.10",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3"
