--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "crypto-icon-next-cli",
-    "version": "3.0.1",
+    "version": "3.0.2-beta.0",
     "description": "CLI tool for generating crypto icon components for Next.js projects with shadcn/ui and Tailwind CSS",
     "main": "dist/index.js",
     "bin": {
